plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.mentit.mento'
version = '0.0.1-SNAPSHOT'

jar{
    enabled = false
}

bootJar {
    archiveFileName = 'app.jar'  // 생성되는 JAR 파일의 이름을 app.jar로 설정합니다.
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    //p6y
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //devtools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    //swagger ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
    testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.1.0'

    //log4j2
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'


    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'


    //jwt
    implementation 'org.json:json:20210307'
    implementation 'com.auth0:java-jwt:4.2.1'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

      //aws s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    //mapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    //s3



}

tasks.named('test') {
    useJUnitPlatform()
}

